...
        android:text="MyRestaurants"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/icons" />

    <EditText
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPersonName"
        android:hint="Enter zip"
        android:textColorHint="@color/icons"
...
        android:layout_above="@+id/savedRestaurantsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Find Restaurants"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
...
